:lipstick: set `button` color explicitlly to fix blue colored buttons on ios.

--- a/packages/css/src/accordion/accordion.css
+++ b/packages/css/src/accordion/accordion.css
@@ -36,6 +36,7 @@
       border-top: var(--hds-stroke-default) solid var(--hds-ui-colors-light-grey-stroke);
       text-align: left;
       background-color: transparent;
+      color: inherit;
       font: var(--hds-typography-body);
 
       &:hover {
